[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyodide-utils"
version = "0.0.1"
authors = [
  { name="Pyodide developers" },
]
description = "Shared utils for the Pyodide ecosystem "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rth/pyiodide-tools"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.mypy]
python_version = "3.10"
mypy_path = ["pyodide_utils"]
show_error_codes = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

check_untyped_defs = true

[tool.ruff]
select = [
  "B904",   # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "B905",   # bugbear (zip() without an explicit strict= parameter set.)
  "C9",     # mccabe complexity
  "E",      # pycodestyles
  "W",      # pycodestyles
  "F",      # pyflakes
  "I",      # isort
  "PGH",    # pygrep-hooks
  "PLC",    # pylint conventions
  "PLE",    # pylint errors
  "UP",     # pyupgrade
]
