[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyodide-lock"
authors = [
  { name="Pyodide developers" },
]
description = "Tooling to manage the `pyodide-lock.json` file"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "pydantic"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest", "pytest-cov"
]

[project.urls]
"Homepage" = "https://github.com/pyodide-lock/pyodide-lock"
"Bug Tracker" = "https://github.com/pyodide-lock/pyodide-lock/issues"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.10"
mypy_path = ["pyodide_lock", "tests"]
show_error_codes = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
select = [
  "B904",   # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "B905",   # bugbear (zip() without an explicit strict= parameter set.)
  "C9",     # mccabe complexity
  "E",      # pycodestyles
  "W",      # pycodestyles
  "F",      # pyflakes
  "I",      # isort
  "PGH",    # pygrep-hooks
  "PLC",    # pylint conventions
  "PLE",    # pylint errors
  "UP",     # pyupgrade
]

[tool.pytest.ini_options]
addopts = '''
--doctest-modules'''
